# rustograd

./: .gitignore  Cargo.toml  README.md
examples/: arithm.rs  curve_fit.rs  cycle.rs  diamond.rs  dnum.rs  dvec.rs  dvec_tensor.rs  exp.rs  gif.rs  macro.rs  manual_curve_fit.rs  mixed_sine.rs  mixed_sine_macro.rs  peak_separation.rs  rc.rs  rc_animation.rs  rc_arithm.rs  rc_curve_fit.rs  rc_diamond.rs  rc_sigmoid.rs  rc_tensor_curve_fit.rs  sine.rs  tape_3classifier.rs  tape_arithm.rs  tape_cannon.rs  tape_cannon2.rs  tape_classifier.rs  tape_curve_fit.rs  tape_diamond.rs  tape_gaussian.rs  tape_gen_graph.rs  tape_gen_graph_atan2.rs  tape_gen_graph_div.rs  tape_gen_graph_fn.rs  tape_gen_graph_gaussian.rs  tape_gen_graph_mixed.rs  tape_gen_graph_mul.rs  tape_gen_graph_poly.rs  tape_gen_graph_sigmoid.rs  tape_gen_graph_sine.rs  (+10 more)
lander/: Cargo.toml
lander/src/: app.rs  lander.rs  main.rs
rustograd-macro/: Cargo.toml
rustograd-macro/src/: lib.rs
rustograph/: Cargo.toml
rustograph/src/: app.rs  exp.rs  main.rs
src/: binary_fn.rs  dnum.rs  dnum_n2.rs  dvec.rs  error.rs  lib.rs  main.rs  rc_term.rs  tape.rs  tensor.rs  term.rs  unary_fn.rs
tests/: cycle.rs
