[package]
name = "rustograd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustograd-macro = { path = "rustograd-macro", optional = true }

[features]
default = []
macro = ["dep:rustograd-macro"]

[workspace]
members = [
    "rustograd-macro"
]
