[package]
name = "rustograd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustograd-macro = { path = "rustograd-macro", optional = true }

[dev-dependencies]
gif = "0.12.0"
rustograd-macro = { path = "rustograd-macro" }

[features]
default = []
macro = ["dep:rustograd-macro"]

[workspace]
members = [
    "rustograd-macro"
]
