[package]
name = "rustograd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustograd-macro = { path = "rustograd-macro", optional = true }

[dev-dependencies]
rustograd-macro = { path = "rustograd-macro" }

[features]
default = []
macro = ["dep:rustograd-macro"]
# Use an expression as the name of intermediate variable. It can consume a lot of memory in large graphs.
expr_name = []

[workspace]
members = [
    "rustograd-macro",
    "lander"
]
